tests/idris2/warning/warning006/expected
1/1: Building Main (Main.idr)
Warning: Main:13:9--13:10:Z does not match expected type

Main:13:9--13:10
 09 | data Foo = Z | S Foo
 10 | 
 11 | -- No matching constuctor of a known type
 12 | head' : (n : Nat) -> {auto 0 prf : IsSucc n} -> (Foo,Foo) -> Vect n a -> a
 13 | head' Z Z _ impossible
              ^

1/1: Building Issue2325 (Issue2325.idr)
Warning: Issue2325:2:5--2:6:Can't deal with fromInteger in impossible clauses yet

Issue2325:2:5--2:6
 1 | fnc : (a : Nat) -> (b : Nat) -> (a > b) = True -> Type
 2 | fnc 0 0 Refl impossible
         ^

Warning: Issue2325:3:5--3:6:Can't deal with fromInteger in impossible clauses yet

Issue2325:3:5--3:6
 1 | fnc : (a : Nat) -> (b : Nat) -> (a > b) = True -> Type
 2 | fnc 0 0 Refl impossible
 3 | fnc 0 (S _) Refl impossible
         ^

Error: fnc is not covering.

Issue2325:1:1--1:55
 1 | fnc : (a : Nat) -> (b : Nat) -> (a > b) = True -> Type
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    fnc 0 _ _

